--- a/ETL_Mini_Project_Starter_Code_Pkline.ipynb
+++ b/ETL_Mini_Project_Starter_Code_Pkline.ipynb
@@ -194,7 +194,9 @@
    ],
    "source": [
     "# Read the data into a Pandas DataFrame\n",
-    "crowdfunding_info_df = pd.read_excel('Resources/crowdfunding.xlsx')\n",
+    "crowdfunding_path = \"C:/Github/Crowdfunding_ETL/Resources/crowdfunding.xlsx\"\n",
+    "crowdfunding_info_df = pd.read_excel(crowdfunding_path)\n",
+    "\n",
     "crowdfunding_info_df.head()"
    ]
   },
@@ -233,7 +235,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -263,10 +266,21 @@
     {
      "data": {
       "text/plain": [
-       "Index(['cf_id', 'contact_id', 'company_name', 'blurb', 'goal', 'pledged',\n",
-       "       'outcome', 'backers_count', 'country', 'currency', 'launched_at',\n",
-       "       'deadline', 'staff_pick', 'spotlight', 'category & sub-category'],\n",
-       "      dtype='object')"
+       "['cf_id',\n",
+       " 'contact_id',\n",
+       " 'company_name',\n",
+       " 'blurb',\n",
+       " 'goal',\n",
+       " 'pledged',\n",
+       " 'outcome',\n",
+       " 'backers_count',\n",
+       " 'country',\n",
+       " 'currency',\n",
+       " 'launched_at',\n",
+       " 'deadline',\n",
+       " 'staff_pick',\n",
+       " 'spotlight',\n",
+       " 'category & sub-category']"
       ]
      },
      "execution_count": 4,
@@ -275,12 +289,13 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns.to_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -424,6 +439,106 @@
        "      <td>theater</td>\n",
        "      <td>plays</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2057</td>\n",
+       "      <td>5650</td>\n",
+       "      <td>Harris Group</td>\n",
+       "      <td>Open-source optimizing database</td>\n",
+       "      <td>7600</td>\n",
+       "      <td>13195</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>174</td>\n",
+       "      <td>DK</td>\n",
+       "      <td>DKK</td>\n",
+       "      <td>1607666400</td>\n",
+       "      <td>1630213200</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>theater/plays</td>\n",
+       "      <td>theater</td>\n",
+       "      <td>plays</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1894</td>\n",
+       "      <td>5889</td>\n",
+       "      <td>Ortiz, Coleman and Mitchell</td>\n",
+       "      <td>Operative upward-trending algorithm</td>\n",
+       "      <td>5200</td>\n",
+       "      <td>1090</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>18</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>GBP</td>\n",
+       "      <td>1596171600</td>\n",
+       "      <td>1620709200</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>film &amp; video/documentary</td>\n",
+       "      <td>film &amp; video</td>\n",
+       "      <td>documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2669</td>\n",
+       "      <td>4842</td>\n",
+       "      <td>Carter-Guzman</td>\n",
+       "      <td>Centralized cohesive challenge</td>\n",
+       "      <td>4500</td>\n",
+       "      <td>14741</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>227</td>\n",
+       "      <td>DK</td>\n",
+       "      <td>DKK</td>\n",
+       "      <td>1608616800</td>\n",
+       "      <td>1632200400</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>theater/plays</td>\n",
+       "      <td>theater</td>\n",
+       "      <td>plays</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1114</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>Nunez-Richards</td>\n",
+       "      <td>Exclusive attitude-oriented intranet</td>\n",
+       "      <td>110100</td>\n",
+       "      <td>21946</td>\n",
+       "      <td>live</td>\n",
+       "      <td>708</td>\n",
+       "      <td>DK</td>\n",
+       "      <td>DKK</td>\n",
+       "      <td>1586322000</td>\n",
+       "      <td>1615356000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>theater/plays</td>\n",
+       "      <td>theater</td>\n",
+       "      <td>plays</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>970</td>\n",
+       "      <td>5468</td>\n",
+       "      <td>Rangel, Holt and Jones</td>\n",
+       "      <td>Open-source fresh-thinking model</td>\n",
+       "      <td>6200</td>\n",
+       "      <td>3208</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>44</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1628830800</td>\n",
+       "      <td>1630386000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>music/electric music</td>\n",
+       "      <td>music</td>\n",
+       "      <td>electric music</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -435,6 +550,11 @@
        "2   1812        4187   Melton, Robinson and Fritz   \n",
        "3   2156        4941  Mcdonald, Gonzalez and Ross   \n",
        "4   1365        2199                Larson-Little   \n",
+       "5   2057        5650                 Harris Group   \n",
+       "6   1894        5889  Ortiz, Coleman and Mitchell   \n",
+       "7   2669        4842                Carter-Guzman   \n",
+       "8   1114        3280               Nunez-Richards   \n",
+       "9    970        5468       Rangel, Holt and Jones   \n",
        "\n",
        "                                           blurb    goal  pledged     outcome  \\\n",
        "0           Pre-emptive tertiary standardization     100        0      failed   \n",
@@ -442,6 +562,11 @@
        "2   Function-based leadingedge pricing structure  108400   142523  successful   \n",
        "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
        "4                      Proactive foreground core    7600     5265      failed   \n",
+       "5                Open-source optimizing database    7600    13195  successful   \n",
+       "6            Operative upward-trending algorithm    5200     1090      failed   \n",
+       "7                 Centralized cohesive challenge    4500    14741  successful   \n",
+       "8           Exclusive attitude-oriented intranet  110100    21946        live   \n",
+       "9               Open-source fresh-thinking model    6200     3208      failed   \n",
        "\n",
        "   backers_count country currency  launched_at    deadline  staff_pick  \\\n",
        "0              0      CA      CAD   1581573600  1614578400       False   \n",
@@ -449,27 +574,39 @@
        "2           1425      AU      AUD   1608184800  1640844000       False   \n",
        "3             24      US      USD   1634792400  1642399200       False   \n",
        "4             53      US      USD   1608530400  1629694800       False   \n",
+       "5            174      DK      DKK   1607666400  1630213200       False   \n",
+       "6             18      GB      GBP   1596171600  1620709200       False   \n",
+       "7            227      DK      DKK   1608616800  1632200400       False   \n",
+       "8            708      DK      DKK   1586322000  1615356000       False   \n",
+       "9             44      US      USD   1628830800  1630386000       False   \n",
        "\n",
-       "   spotlight category & sub-category    category  subcategory  \n",
-       "0      False        food/food trucks        food  food trucks  \n",
-       "1       True              music/rock       music         rock  \n",
-       "2      False          technology/web  technology          web  \n",
-       "3      False              music/rock       music         rock  \n",
-       "4      False           theater/plays     theater        plays  "
+       "   spotlight   category & sub-category      category     subcategory  \n",
+       "0      False          food/food trucks          food     food trucks  \n",
+       "1       True                music/rock         music            rock  \n",
+       "2      False            technology/web    technology             web  \n",
+       "3      False                music/rock         music            rock  \n",
+       "4      False             theater/plays       theater           plays  \n",
+       "5      False             theater/plays       theater           plays  \n",
+       "6      False  film & video/documentary  film & video     documentary  \n",
+       "7      False             theater/plays       theater           plays  \n",
+       "8      False             theater/plays       theater           plays  \n",
+       "9      False      music/electric music         music  electric music  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "crowdfunding_info_df[['category','subcategory']] = crowdfunding_info_df['category & sub-category'].str.split('/', n=1, expand=True)\n",
+    "crowdfunding_info_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -488,15 +625,16 @@
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
-    "\n",
-    "\n",
+    "# crowdfunding_info_df.columns\n",
+    "categories = crowdfunding_info_df['category'].unique()\n",
+    "subcategories = crowdfunding_info_df['subcategory'].unique()\n",
     "print(categories)\n",
     "print(subcategories)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -553,9 +691,9 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
-    "\n",
+    "cat_ids = ['cat' + str(x) for x in category_ids]\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
+    "scat_ids = ['subcat' + str(x) for x in subcategory_ids]\n",
     "    \n",
     "print(cat_ids)\n",
     "print(scat_ids)"
@@ -3700,7 +3838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
