--- a/ETL_Mini_Project_Starter_Code_Pkline.ipynb
+++ b/ETL_Mini_Project_Starter_Code_Pkline.ipynb
@@ -701,18 +701,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "category_df = pd.DataFrame({'category_id': category_ids, 'category': cat_ids})\n",
     "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcategory_df = pd.DataFrame({'subcategory_id': subcategory_ids, 'subcategory': scat_ids})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -743,67 +745,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>cat1</td>\n",
-       "      <td>food</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>cat2</td>\n",
-       "      <td>music</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>cat3</td>\n",
-       "      <td>technology</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>cat4</td>\n",
-       "      <td>theater</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>cat5</td>\n",
-       "      <td>film &amp; video</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>6</td>\n",
        "      <td>cat6</td>\n",
-       "      <td>publishing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>7</td>\n",
        "      <td>cat7</td>\n",
-       "      <td>games</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>8</td>\n",
        "      <td>cat8</td>\n",
-       "      <td>photography</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>9</td>\n",
        "      <td>cat9</td>\n",
-       "      <td>journalism</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  category_id      category\n",
-       "0        cat1          food\n",
-       "1        cat2         music\n",
-       "2        cat3    technology\n",
-       "3        cat4       theater\n",
-       "4        cat5  film & video\n",
-       "5        cat6    publishing\n",
-       "6        cat7         games\n",
-       "7        cat8   photography\n",
-       "8        cat9    journalism"
+       "   category_id category\n",
+       "0            1     cat1\n",
+       "1            2     cat2\n",
+       "2            3     cat3\n",
+       "3            4     cat4\n",
+       "4            5     cat5\n",
+       "5            6     cat6\n",
+       "6            7     cat7\n",
+       "7            8     cat8\n",
+       "8            9     cat9"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -845,157 +847,157 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>subcat1</td>\n",
-       "      <td>food trucks</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>subcat2</td>\n",
-       "      <td>rock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>subcat3</td>\n",
-       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>subcat4</td>\n",
-       "      <td>plays</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>subcat5</td>\n",
-       "      <td>documentary</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>6</td>\n",
        "      <td>subcat6</td>\n",
-       "      <td>electric music</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>7</td>\n",
        "      <td>subcat7</td>\n",
-       "      <td>drama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>8</td>\n",
        "      <td>subcat8</td>\n",
-       "      <td>indie rock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>9</td>\n",
        "      <td>subcat9</td>\n",
-       "      <td>wearables</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>10</td>\n",
        "      <td>subcat10</td>\n",
-       "      <td>nonfiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
+       "      <td>11</td>\n",
        "      <td>subcat11</td>\n",
-       "      <td>animation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
+       "      <td>12</td>\n",
        "      <td>subcat12</td>\n",
-       "      <td>video games</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
+       "      <td>13</td>\n",
        "      <td>subcat13</td>\n",
-       "      <td>shorts</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
+       "      <td>14</td>\n",
        "      <td>subcat14</td>\n",
-       "      <td>fiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
+       "      <td>15</td>\n",
        "      <td>subcat15</td>\n",
-       "      <td>photography books</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
+       "      <td>16</td>\n",
        "      <td>subcat16</td>\n",
-       "      <td>radio &amp; podcasts</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
+       "      <td>17</td>\n",
        "      <td>subcat17</td>\n",
-       "      <td>metal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
+       "      <td>18</td>\n",
        "      <td>subcat18</td>\n",
-       "      <td>jazz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
+       "      <td>19</td>\n",
        "      <td>subcat19</td>\n",
-       "      <td>translations</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
+       "      <td>20</td>\n",
        "      <td>subcat20</td>\n",
-       "      <td>television</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
+       "      <td>21</td>\n",
        "      <td>subcat21</td>\n",
-       "      <td>mobile games</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
+       "      <td>22</td>\n",
        "      <td>subcat22</td>\n",
-       "      <td>world music</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
+       "      <td>23</td>\n",
        "      <td>subcat23</td>\n",
-       "      <td>science fiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
+       "      <td>24</td>\n",
        "      <td>subcat24</td>\n",
-       "      <td>audio</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   subcategory_id        subcategory\n",
-       "0         subcat1        food trucks\n",
-       "1         subcat2               rock\n",
-       "2         subcat3                web\n",
-       "3         subcat4              plays\n",
-       "4         subcat5        documentary\n",
-       "5         subcat6     electric music\n",
-       "6         subcat7              drama\n",
-       "7         subcat8         indie rock\n",
-       "8         subcat9          wearables\n",
-       "9        subcat10         nonfiction\n",
-       "10       subcat11          animation\n",
-       "11       subcat12        video games\n",
-       "12       subcat13             shorts\n",
-       "13       subcat14            fiction\n",
-       "14       subcat15  photography books\n",
-       "15       subcat16   radio & podcasts\n",
-       "16       subcat17              metal\n",
-       "17       subcat18               jazz\n",
-       "18       subcat19       translations\n",
-       "19       subcat20         television\n",
-       "20       subcat21       mobile games\n",
-       "21       subcat22        world music\n",
-       "22       subcat23    science fiction\n",
-       "23       subcat24              audio"
+       "    subcategory_id subcategory\n",
+       "0                1     subcat1\n",
+       "1                2     subcat2\n",
+       "2                3     subcat3\n",
+       "3                4     subcat4\n",
+       "4                5     subcat5\n",
+       "5                6     subcat6\n",
+       "6                7     subcat7\n",
+       "7                8     subcat8\n",
+       "8                9     subcat9\n",
+       "9               10    subcat10\n",
+       "10              11    subcat11\n",
+       "11              12    subcat12\n",
+       "12              13    subcat13\n",
+       "13              14    subcat14\n",
+       "14              15    subcat15\n",
+       "15              16    subcat16\n",
+       "16              17    subcat17\n",
+       "17              18    subcat18\n",
+       "18              19    subcat19\n",
+       "19              20    subcat20\n",
+       "20              21    subcat21\n",
+       "21              22    subcat22\n",
+       "22              23    subcat23\n",
+       "23              24    subcat24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1225,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
